Modify icon and delete Vite.svg

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/acropolis_logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Nueva Acropolis</title>
   </head>
   <body
     class="scrollbar overflow-y-scroll bg-[#f2f2f2] dark:scrollbar-thumb-[#73747583] dark:scrollbar-track-[#318191a]"
