--- a/index.html
+++ b/index.html
@@ -12,5 +12,17 @@
   >
     <div class="box-border pointer-events-auto " id="pageContainer" ></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script>
+      // On page load or when changing themes, best to add inline in `head` to avoid FOUC
+      if (
+        localStorage.getItem("color-theme") === "dark" ||
+        (!("color-theme" in localStorage) &&
+          window.matchMedia("(prefers-color-scheme: dark)").matches)
+      ) {
+        document.documentElement.classList.add("dark");
+      } else {
+        document.documentElement.classList.remove("dark");
+      }
+    </script>
   </body>
 </html>
