Modify login page back

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" style="background-color: green">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/acropolis.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta  name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nueva Acropolis</title>
   </head>
   <body
