Meta color theme

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="es" style="background-color: green">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
+    <meta name="theme-color" content="#26af5c">
     <link rel="icon" type="image/svg+xml" href="/acropolis.svg" />
     <meta  name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nueva Acropolis</title>
