--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="theme-color" content="#26af5c">
+    <meta property="og:title" content="Nueva Acrópolis"/>
+    <meta property="og:description" content="Sistema Nueva Acrópolis ayacucho"/>
+    <meta name="description" content="Sistema Nueva Acrópolis Ayacucho, Perú"/>
+    <meta name="keywords" content="Acrópolis, Ayacucho, Peru, Nueva Acrópolis"/>
+    <meta name="author" content="Nueva Acrópolis" />
+    <meta name="copyright" content="Univercel Corp" />
+    <meta name="robots" content="index"/>
     <link rel="icon" type="image/svg+xml" href="/acropolis.svg" />
     <meta  name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nueva Acropolis</title>
+    <title>Nueva Acropolis - Ayacucho</title>
   </head>
   <body
     class="scrollbar overflow-y-scroll bg-[#f2f2f2] dark:scrollbar-thumb-[#73747583] dark:scrollbar-track-[#318191a]"
