--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="robots" content="index"/>
     <link rel="icon" type="image/svg+xml" href="/acropolis.svg" />
     <meta  name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nueva Acropolis - Ayacucho</title>
+    <title>Nueva Acrópolis - Ayacucho</title>
   </head>
   <body
     class="scrollbar overflow-y-scroll bg-[#f2f2f2] dark:scrollbar-thumb-[#73747583] dark:scrollbar-track-[#318191a]"
